# annoying

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
conf/: annoy_v2v_server_dev.json
demo/: annoy_demo.cpp  httplib_demo.cpp
include/v2vk/annoy_kit/: index_builder.h  index_register.h
src/v2v_server/: annoy_v2v_server.cpp
test_data/: json_lines_demo.txt
tools/: test_data_generator.py
